--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TRGN6GF1Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-0TRGN6GF1Y');
+  </script>
 </body>
 </html>
