--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
 <body>
   <app-root></app-root>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TRGN6GF1Y"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LPDCBXLYQ0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-0TRGN6GF1Y');
+    gtag('config', 'G-LPDCBXLYQ0');
   </script>
 </body>
 </html>
